# 2048

./: .gitignore  2048.cpp  2048.h  BoardModel.cpp  BoardModel.h  CMakeLists.txt  GameController.cpp  GameController.h  Main.qml  README.md  SaveController.cpp  SaveController.h  Types.h  gamecontroller.cpp  gamecontroller.h  main.cpp  main.qml
.github/workflows/: build-and-test.yml
qml/: EndDialog.qml  GameButton.qml  GameGrid.qml  GameHeader.qml  GameSettingsDialog.qml  Main.qml  MainMenu.qml  ResetDialog.qml  ScoresWindow.qml  Tile.qml  UndoDialog.qml
tests/: CMakeLists.txt  Test2048.cpp  Test2048.h
